2002-03-15  Bruno Haible  <bruno@clisp.org>

	* cln.tex: Document problem with GNU make 3.77.
	Reported by Michael Somos <somos@grail.cba.csuohio.edu>.

2002-02-16  Richard Kreckel  <kreckel@ginac.de>

        * cln.m4: quote macro name.
          Pointed out by Roberto Bagnara.

2002-01-20  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/config.{guess,sub}: Update to GNU version 2002-01-02.
          (the old one was broken on Linux/Mips.)

2002-01-04  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/autoconf.m4f: get brutal in order to adhere to FHS.
        * Version 1.1.4 released.

2002-01-03  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/acinclude.m4: revamp MPN-matcher.
        * autoconf/aclocal.m4: upgrade to autoconf-2.52 infrastructure,
          sync with CLisp from CVS.
        * autoconf/autoconf: Likewise.
        * autoconf/autoconf.m4f: Likewise (new file).
        * configure.ac: Likewise (new file, replaces configure.in).
        * configure.in: Likewise (deleted, replaced by configure.ac).
        * autoconf/config.{guess,sub}: Update to GNU version 2001-12-13.
        * src/Makefile.in: made VPATH safe for autoconf-2.52.
        * include/cln/config.h.in: Add __s390__.

2001-12-31  Richard Kreckel  <kreckel@ginac.de>

        * src/base/digitseq/cl_DS.h: <gmp.h> is not included extern "C"
          any more since GMP4 has some C++ support in it.

2001-12-14  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/modules.h, include/cln/object.h: add support for
          s390.
        * src/numtheory/cl_nt_sqrtmodp.cc: workaround for GCC2.x compiler-bug
          on s390, provided by Gerhard Tonn.

2001-11-05  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/ltmain.sh: Upgrade to libtool-1.4.2.
        * autoconf/config.{guess,sub}: Update to GNU version 2001-09-07.
        * Version 1.1.3 released.

2001-11-04  Bruno Haible  <haible@clisp.cons.org>

        Interoperability with gcc-3.0 -fuse-cxa-atexit.